# paper2speech

./: .gitignore  README.md  app.py  pyproject.toml
src/paper_audio/audio/: player.py  processor.py
src/paper_audio/text/: __init__.py
